permalink: whats-new.html 
keywords: 'what"s new, features, new, release notes, bugs, limitations, known issues, enhancements, fixes, cloud manager, NetApp Console' 
summary: 了解Amazon FSx for NetApp ONTAP中的新功能。 
---
= Amazon FSx for NetApp ONTAP 的新功能
:hardbreaks:
:allow-uri-read: 
:nofooter: 
:icons: font
:linkattrs: 
:imagesdir: ./media/


[role="lead"]
了解 FSx for ONTAP中的新功能。



== 2025年11月11日



=== 支持本地ONTAP系统与 FSx for ONTAP文件系统之间的复制

在NetApp Console系统页面上，可以在本地ONTAP系统和 FSx for ONTAP文件系统之间进行数据复制。

link:https://docs.netapp.com/us-en/storage-management-fsx-ontap/use/task-manage-fsx-systems.html#replicate-data["复制数据"]



== 2025年10月6日



=== BlueXP现在是NetApp Console

NetApp Console建立在增强和重组的BlueXP基础之上，可在企业级内部和云环境中集中管理NetApp存储和NetApp Data Services，提供实时洞察、更快的工作流程和简化的管理，并且高度安全且合规。

有关更改的详细信息，请参阅link:https://docs.netapp.com/us-en/console-relnotes/index.html["NetApp Console发行说明。"^]



== 2025年8月3日



=== 复制关系选项卡的增强功能

我们在复制关系表中添加了几个新列，以便在“复制关系”选项卡中为您提供有关复制关系的更多信息。该表现在包含以下列：

* SnapMirror 策略
* 源文件系统
* 目标文件系统
* 关系状态
* 上次转乘时间




== 2025年7月14日



=== 支持在两个 FSx for ONTAP文件系统之间复制数据

现在可以从BlueXP控制台中的画布在两个 FSx for ONTAP文件系统之间进行数据复制。

link:https://docs.netapp.com/us-en/storage-management-fsx-ontap/use/task-manage-fsx-systems.html#replicate-data["复制数据"]



== 2025年6月29日



=== 凭证更新

为 FSx for ONTAP文件系统设置凭据和权限后，您将被重定向到BlueXP凭据页面。在此页面中，您可以重命名或删除您的 FSx for ONTAP凭据。

link:https://docs.netapp.com/us-en/storage-management-fsx-ontap/requirements/task-setting-up-permissions-fsx.html["设置 FSx for ONTAP文件系统的权限"]



== 2025年5月4日



=== 追踪器响应支持

Tracker 现在提供 API 响应，以便您可以看到与任务相关的 REST API 输出。



=== AWS Secrets Manager 的链接身份验证支持

您现在可以选择使用 AWS Secrets Manager 中的机密来验证链接，这样您就不必使用存储在BlueXP Workloads 中的凭证。

link:https://docs.netapp.com/us-en/workload-fsx-ontap/create-link.html["使用 Lambda 链接连接到 FSx for ONTAP文件系统"^]



=== 实施 FSx for ONTAP文件系统的最佳实践

BlueXP Workloads 提供了一个仪表板，您可以在其中查看文件系统配置的良好架构状态。您可以利用此分析来为 FSx for ONTAP文件系统实施最佳实践。文件系统配置分析包括以下配置：SSD 容量阈值、计划的本地快照、计划的 FSx for ONTAP备份、数据分层和远程数据复制。
